# crashmeoutside

snap/: snapcraft.yaml
src/: CMakeLists.txt  crashmeoutside.cpp
